[metadata]
name = greenplum-python 
version = attr: greenplumpython.__version__
license = Apache Software License
author_email = greenplum-python@vmware.com
maintainer_email = greenplum-python@vmware.com
description = Python interface for Greenplum and Postgres
long_description = file: README.md
long_description_content_type = text/x-rst
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
python_requires = >= 3.8
